@@ -7,6 +7,7 @@ else:
     basestring = (str, unicode)
 
 from pyramid_mailer.response import MailResponse
+from pyramid_mailer.response import MailBase
 
 from pyramid_mailer.exceptions import BadHeaders
 from pyramid_mailer.exceptions import InvalidMessage
@@ -98,21 +99,34 @@ class Message(object):
         """
         Creates a Lamson MailResponse instance
         """
+        bodies = [self.body, self.html]
+        for idx, part in enumerate(bodies):
+            if not isinstance(part, Attachment):
+                continue
 
-        response = MailResponse(Subject=self.subject, 
+            base = MailBase()
+            base.body = part.data
+            base.content_encoding['Content-Type'] = (part.content_type, {})
+            base.content_encoding[
+                'Content-Disposition'] = (part.disposition, {})
+            base.content_encoding[
+                'Content-Transfer-Encoding'] = part.transfer_encoding
+            bodies[idx] = base
+
+        response = MailResponse(Subject=self.subject,
                                 To=self.recipients,
                                 From=self.sender,
-                                Body=self.body,
-                                Html=self.html)
+                                Body=bodies[0],
+                                Html=bodies[1])
 
         if self.cc:
             response.base['Cc'] = self.cc
 
         for attachment in self.attachments:
 
-            response.attach(attachment.filename, 
-                            attachment.content_type, 
-                            attachment.data, 
+            response.attach(attachment.filename,
+                            attachment.content_type,
+                            attachment.data,
                             attachment.disposition,
                             attachment.transfer_encoding)
 
